apps/base/ocp4-kt-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocp4-kt
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
