apps/base/ocp4-kt-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ocp4-kt
  name: ocp4-kt
  namespace: ocp4-kt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocp4-kt
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ocp4-kt
    spec:
      containers:
      - image: quay.io/terrencejun3210/ocp4-kt:v1
        name: ocp4-kt
        resources:
          limits:
            cpu: '1'
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
