apps/base/ocp4-kt-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ocp4-kt
  name: ocp4-kt
  namespace: ocp4-kt
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ocp4-kt
