apps/base/ocp4-kt-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ocp4-kt
  name: ocp4-kt
  namespace: ocp4-kt
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ocp4-kt
    weight: 100
